syntax = "proto3";

package voice;

// Voice service for TTS and STT operations
// Implemented by streaming-core Rust worker
service VoiceService {
  // Health check
  rpc Ping(PingRequest) returns (PingResponse);

  // Text-to-Speech (batch mode)
  rpc Synthesize(SynthesizeRequest) returns (SynthesizeResponse);

  // Text-to-Speech (streaming mode)
  rpc SynthesizeStream(SynthesizeRequest) returns (stream AudioChunk);

  // Speech-to-Text
  rpc Transcribe(TranscribeRequest) returns (TranscribeResponse);

  // List available TTS adapters
  rpc ListAdapters(ListAdaptersRequest) returns (ListAdaptersResponse);

  // Load a specific adapter
  rpc LoadAdapter(LoadAdapterRequest) returns (LoadAdapterResponse);

  // Unload an adapter to free memory
  rpc UnloadAdapter(UnloadAdapterRequest) returns (UnloadAdapterResponse);
}

// ----- Ping -----

message PingRequest {}

message PingResponse {
  string message = 1;
  int32 adapter_count = 2;
}

// ----- TTS -----

message SynthesizeRequest {
  string text = 1;
  string voice = 2;          // Voice ID (adapter-specific)
  string adapter = 3;        // "kokoro", "fish-speech", "f5-tts", "styletts2", "xtts-v2"
  float speed = 4;           // Speed multiplier (0.5-2.0)
  int32 sample_rate = 5;     // Output sample rate (default 24000)
}

message SynthesizeResponse {
  bytes audio = 1;           // PCM 16-bit audio
  int32 sample_rate = 2;
  int32 duration_ms = 3;
  string adapter = 4;
}

message AudioChunk {
  bytes audio = 1;           // PCM 16-bit chunk
  bool is_last = 2;
  int32 chunk_index = 3;
}

// ----- STT -----

message TranscribeRequest {
  bytes audio = 1;           // PCM 16-bit audio (16kHz mono expected)
  int32 sample_rate = 2;     // Input sample rate (default 16000)
  string language = 3;       // Language hint or "auto"
  string model = 4;          // Whisper model: "tiny", "base", "small", "medium", "large"
}

message TranscribeResponse {
  string text = 1;
  string language = 2;       // Detected language
  float confidence = 3;
  repeated Segment segments = 4;
}

message Segment {
  string word = 1;
  float start = 2;           // Start time in seconds
  float end = 3;             // End time in seconds
  float confidence = 4;
}

// ----- Adapter Management -----

message ListAdaptersRequest {}

message ListAdaptersResponse {
  repeated AdapterInfo adapters = 1;
}

message AdapterInfo {
  string name = 1;
  bool loaded = 2;
  int32 voice_count = 3;
  int64 memory_bytes = 4;
}

message LoadAdapterRequest {
  string adapter = 1;
}

message LoadAdapterResponse {
  bool success = 1;
  string error = 2;
  int32 load_time_ms = 3;
}

message UnloadAdapterRequest {
  string adapter = 1;
}

message UnloadAdapterResponse {
  bool success = 1;
  string error = 2;
}
